# submitit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env_dev.yml  mypy.ini  pyproject.toml  setup.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml
docs/: checkpointing.md  examples.md  lsf.md  mnist.py  nevergrad.md  plugins.md  structure.md  tips.md
docs/examples/: torch_distributed.py
examples/: README.md  run_all_examples.sh
examples/local/: README.md  advanced_example.py  simple_job.py
examples/pbs/: README.md  array_jobs_pbs.py  simple_pbs.py
examples/slurm/: README.md  array_jobs.py  simple_slurm.py
integration/: preemption.py
requirements/: dev.txt  main.txt
submitit/: __init__.py  conftest.py  helpers.py  snapshot.py  test_documentation.py  test_helpers.py  test_pickle.py  test_snapshot.py
submitit/auto/: auto.py  test_auto.py
submitit/core/: _submit.py  core.py  job_environment.py  logger.py  plugins.py  submission.py  tblib.py  test_async.py  test_core.py  test_plugins.py  test_submission.py  test_utils.py  utils.py
submitit/local/: _local.py  debug.py  local.py  test_debug.py  test_local.py
submitit/lsf/: __init__.py  lsf.py  test_lsf.py  test_lsf_integration.py
submitit/oar/: oar.py  test_oar.py
submitit/slurm/: _sbatch_test_record.txt  slurm.py  test_slurm.py
submitthem/: __init__.py  conftest.py  helpers.py  test_documentation.py  test_helpers.py  test_pickle.py
submitthem/auto/: auto.py  test_auto.py
submitthem/core/: _submit.py  core.py  job_environment.py  logger.py  plugins.py  submission.py  test_async.py  test_core.py  test_plugins.py  test_utils.py  utils.py
submitthem/local/: _local.py  debug.py  local.py  test_debug.py  test_local.py
submitthem/pbs/: _qsub_test_record.txt  pbs.py  test_pbs.py
submitthem/slurm/: _sbatch_test_record.txt  slurm.py  test_slurm.py
