[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "submitthem"
readme = "README.md"
authors = [{name = "Xavier Roynard", email = "xavroynard@hotmail.com"}]
requires-python = ">=3.10"
dynamic = ["version", "description"]

dependencies = [
  "cloudpickle>=1.2.1",
  "typing_extensions>=3.7.4.2",
]

classifiers=[
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Distributed Computing",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Source = "https://github.com/xroynard/submitthem"
Tracker = "https://github.com/xroynard/submitthem/issues"

[tool.uv]
# uv configuration - modern Python package manager
python-preference = "managed"

[tool.uv.pip]
compile-bytecode = true

[dependency-groups]
test = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.1",
    "coverage[toml]>=5.1",
    "cloudpickle>=3.1.2",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.4.1",
    "pylint>=3.0.0",
]
format = [
    "ruff>=0.1.0",
    "pre-commit>=1.15.2",
]
release = [
    "flit>=3.5.1",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "format" },
    { include-group = "release" },
]

[tool.ruff]
line-length = 110
extend-exclude = [".git", ".mypy_cache", "venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]


[tool.pylint."MESSAGES CONTROL"]
# disabled messages
# * no-member has a lot of false positive, mypy does it better
disable = """
    broad-except,
    fixme,
    invalid-name,
    logging-fstring-interpolation,
    missing-docstring,
    no-else-return,
    no-member,
    protected-access,
    too-few-public-methods,
    useless-import-alias,
    unspecified-encoding,
    too-many-positional-arguments,
"""

[tool.pylint.DESIGN]
max-args = 6

[tool.pylint.FORMAT]
max-line-length = "140"

[tool.pylint.SIMILARITIES]
ignore-imports = "yes"

[tool.coverage.run]
omit = ["*/test_*.py", "/tmp/pytest*/*"]
data_file = "test_results/coverage/coverage.bin"

[tool.coverage.html]
directory = "test_results/coverage_html"

[tool.coverage.xml]
output = "test_results/coverage/coverage.xml"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
  "pragma: no cover", # Re-enable the standard pragma
  "raise NotImplementedError",
  "^\\s+\\.\\.\\.$",
]

[tool.mypy]
show_error_codes = true
files = ["submitthem", "integration", "examples"]

[[tool.mypy.overrides]]
module = ['cloudpickle', 'ipdb', 'pytest', 'setuptools']
ignore_missing_imports = true
